--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <style>
         /* ======== BASE & VARIABLES ======== */
         :root {
-            --ls-font-heading: 'Playfair Display', serif;
-            --ls-font-body: 'Poppins', sans-serif;
+            --ls-font-heading: 'TOLYER Bold', sans-serif; /* MODIFIED FONT */
+            --ls-font-body: 'TOLYER Bold', sans-serif; /* MODIFIED FONT */
             --ls-color-primary: #D84B42; /* Merah Lobster */
             --ls-color-secondary: #2D4C5E; /* Biru Gelap / Abu-abu Kebiruan */
             --ls-color-background: #F9F7F2; /* Refined Cream */
