--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 <body>
     <header class="ls-main-header">
         <div class="ls-container">
-            <a href="#home"><img src="https://i.ibb.co/L8yN5s2/Logo-Lobster-Shack.png" alt="Logo Lobster Shack" class="ls-logo"></a>
+            <a href="#home"><img src=https://firebasestorage.googleapis.com/v0/b/lobster-shack-bali.firebasestorage.app/o/1753624796681.png?alt=media&token=7f6ba3b9-08a4-4a92-a3bc-1dc569944b48" alt="Logo Lobster Shack" class="ls-logo"></a>
             
             <nav class="ls-main-nav" id="ls-main-nav">
                 <ul class="ls-nav-links">
