--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 <body>
     <header class="ls-main-header">
         <div class="ls-container">
-            <a href="#home"><img src=https://firebasestorage.googleapis.com/v0/b/lobster-shack-bali.firebasestorage.app/o/1753624796681.png?alt=media&token=7f6ba3b9-08a4-4a92-a3bc-1dc569944b48" alt="Logo Lobster Shack" class="ls-logo"></a>
+            <a href="#home"><img src=https://lh3.googleusercontent.com/d/1Pq8Ign3a0Wm0SHU220ov5b-jnfGDBUoO" alt="Logo Lobster Shack" class="ls-logo"></a>
             
             <nav class="ls-main-nav" id="ls-main-nav">
                 <ul class="ls-nav-links">
@@ -439,7 +439,7 @@
         <div class="ls-container">
             <div class="footer-content">
                 <div class="footer-about">
-                    <img src="https://i.ibb.co/L8yN5s2/Logo-Lobster-Shack.png" alt="Logo Lobster Shack" class="ls-logo">
+                    <img src="https://lh3.googleusercontent.com/d/1Pq8Ign3a0Wm0SHU220ov5b-jnfGDBUoO" alt="Logo Lobster Shack" class="ls-logo">
                     <p data-lang-key="footer_description">Experience the finest catch of the day, grilled to perfection, in a cozy and inviting atmosphere. We look forward to welcoming you.</p>
                 </div>
                 <div class="footer-contact">
