--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 <body>
     <header class="ls-main-header">
         <div class="ls-container">
-            <a href="#home"><img src=https://lh3.googleusercontent.com/d/1Pq8Ign3a0Wm0SHU220ov5b-jnfGDBUoO" alt="Logo Lobster Shack" class="ls-logo"></a>
+            <a href="#home"><img src="https://lh3.googleusercontent.com/d/1Pq8Ign3a0Wm0SHU220ov5b-jnfGDBUoO" alt="Logo Lobster Shack" class="ls-logo"></a>
             
             <nav class="ls-main-nav" id="ls-main-nav">
                 <ul class="ls-nav-links">
